Changes based on first editing pass.

--- a/doc/dissertation/ABSOL_Ara_Adkins.tex
+++ b/doc/dissertation/ABSOL_Ara_Adkins.tex
@@ -279,7 +279,7 @@
 
 \title{\titletext}
 \author{Ara Adkins}
-\date{Bachelor of Science, Computer Science with Honours\\The University of Bath\\\today}
+\date{Bachelor of Science, Computer Science with Honours\\The University of Bath\\2017}
 
 % Glossaries
 \makeglossaries
