--- a/doc/dissertation/resources/software_readme.tex
+++ b/doc/dissertation/resources/software_readme.tex
@@ -30,7 +30,9 @@ Each of these files is given relative to the project root in \mintinline{text}{a
         \item \mintinline{text}{./src/Absol/Metaverify/RuleTag.hs}
         \item \mintinline{text}{./src/Absol/Metaverify/State.hs}
     \end{itemize}
-    \item \textbf{Misc:} There are also stub implementation files for other components of the metacompiler toolchain that have since been declared as out of project scope. 
+    \item \textbf{Misc:} There are also stub implementation files for other components of the metacompiler toolchain that have since been declared as out of the project scope. 
+    \item \textbf{Metaspec Examples:} These consist of the file used for testing the metacompiler and the sample implementation of `spreadsheet' (see \autoref{sec:an_example_language}).
+    They can be found in the \mintinline{text}{./metaspec/} directory.
 \end{itemize}
 
 % section the_project_structure (end)
